@@ -28,9 +28,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -64,11 +62,8 @@ import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.processor.AbstractProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
-import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
-import org.apache.nifi.processor.io.InputStreamCallback;
-import org.apache.nifi.processor.io.OutputStreamCallback;
 import org.apache.nifi.processor.util.StandardValidators;
 
 @SideEffectFree
@@ -150,41 +145,32 @@ public class SplitAvro extends AbstractProcessor {
 
     // Metadata keys that are not transferred to split files when output strategy is datafile
     // Avro will write this key/values pairs on its own
-    static final Set<String> RESERVED_METADATA;
-    static {
-        Set<String> reservedMetadata = new HashSet<>();
-        reservedMetadata.add("avro.schema");
-        reservedMetadata.add("avro.codec");
-        RESERVED_METADATA = Collections.unmodifiableSet(reservedMetadata);
-    }
+    static final Set<String> RESERVED_METADATA = Set.of(
+            "avro.schema",
+            "avro.codec"
+    );
 
-    private List<PropertyDescriptor> properties;
-    private Set<Relationship> relationships;
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
+            SPLIT_STRATEGY,
+            OUTPUT_SIZE,
+            OUTPUT_STRATEGY,
+            TRANSFER_METADATA
+    );
 
-    @Override
-    protected void init(final ProcessorInitializationContext context) {
-        final List<PropertyDescriptor> properties = new ArrayList<>();
-        properties.add(SPLIT_STRATEGY);
-        properties.add(OUTPUT_SIZE);
-        properties.add(OUTPUT_STRATEGY);
-        properties.add(TRANSFER_METADATA);
-        this.properties = Collections.unmodifiableList(properties);
-
-        final Set<Relationship> relationships = new HashSet<>();
-        relationships.add(REL_ORIGINAL);
-        relationships.add(REL_SPLIT);
-        relationships.add(REL_FAILURE);
-        this.relationships = Collections.unmodifiableSet(relationships);
-    }
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_ORIGINAL,
+            REL_SPLIT,
+            REL_FAILURE
+    );
 
     @Override
     public Set<Relationship> getRelationships() {
-        return relationships;
+        return RELATIONSHIPS;
     }
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return properties;
+        return PROPERTIES;
     }
 
     @Override
@@ -259,55 +245,49 @@ public class SplitAvro extends AbstractProcessor {
             final List<FlowFile> childFlowFiles = new ArrayList<>();
             final AtomicReference<GenericRecord> recordHolder = new AtomicReference<>(null);
 
-            session.read(originalFlowFile, new InputStreamCallback() {
-                @Override
-                public void process(InputStream rawIn) throws IOException {
-                    try (final InputStream in = new BufferedInputStream(rawIn);
-                         final DataFileStream<GenericRecord> reader = new DataFileStream<>(in, new GenericDatumReader<>())) {
+            session.read(originalFlowFile, rawIn -> {
+                try (final InputStream in = new BufferedInputStream(rawIn);
+                     final DataFileStream<GenericRecord> reader = new DataFileStream<>(in, new GenericDatumReader<>())) {
 
-                        final AtomicReference<String> codec = new AtomicReference<>(reader.getMetaString(DataFileConstants.CODEC));
-                        if (codec.get() == null) {
-                            codec.set(DataFileConstants.NULL_CODEC);
-                        }
+                    final AtomicReference<String> codec = new AtomicReference<>(reader.getMetaString(DataFileConstants.CODEC));
+                    if (codec.get() == null) {
+                        codec.set(DataFileConstants.NULL_CODEC);
+                    }
 
-                        // while records are left, start a new split by spawning a FlowFile
-                        final AtomicReference<Boolean> hasNextHolder = new AtomicReference<>(reader.hasNext());
-                        while (hasNextHolder.get()) {
-                            FlowFile childFlowFile = session.create(originalFlowFile);
-                            childFlowFile = session.write(childFlowFile, new OutputStreamCallback() {
-                                @Override
-                                public void process(OutputStream rawOut) throws IOException {
-                                    try (final BufferedOutputStream out = new BufferedOutputStream(rawOut)) {
-                                        splitWriter.init(reader, codec.get(), out);
+                    // while records are left, start a new split by spawning a FlowFile
+                    final AtomicReference<Boolean> hasNextHolder = new AtomicReference<>(reader.hasNext());
+                    while (hasNextHolder.get()) {
+                        FlowFile childFlowFile = session.create(originalFlowFile);
+                        childFlowFile = session.write(childFlowFile, rawOut -> {
+                            try (final BufferedOutputStream out = new BufferedOutputStream(rawOut)) {
+                                splitWriter.init(reader, codec.get(), out);
 
-                                        // append to the current FlowFile until no more records, or splitSize is reached
-                                        int recordCount = 0;
-                                        while (hasNextHolder.get() && recordCount < splitSize) {
-                                            recordHolder.set(reader.next(recordHolder.get()));
-                                            splitWriter.write(recordHolder.get());
-                                            recordCount++;
-                                            hasNextHolder.set(reader.hasNext());
-                                        }
-
-                                        splitWriter.flush();
-                                    } finally {
-                                        splitWriter.close();
-                                    }
+                                // append to the current FlowFile until no more records, or splitSize is reached
+                                int recordCount = 0;
+                                while (hasNextHolder.get() && recordCount < splitSize) {
+                                    recordHolder.set(reader.next(recordHolder.get()));
+                                    splitWriter.write(recordHolder.get());
+                                    recordCount++;
+                                    hasNextHolder.set(reader.hasNext());
                                 }
-                            });
 
-                            // would prefer this to be part of the SplitWriter, but putting the metadata in FlowFile attributes
-                            // can't be done inside of an OutputStream callback which is where the splitWriter is used
-                            if (splitWriter instanceof BareRecordSplitWriter && transferMetadata) {
-                                final Map<String, String> metadata = new HashMap<>();
-                                for (String metaKey : reader.getMetaKeys()) {
-                                    metadata.put(metaKey, reader.getMetaString(metaKey));
-                                }
-                                childFlowFile = session.putAllAttributes(childFlowFile, metadata);
+                                splitWriter.flush();
+                            } finally {
+                                splitWriter.close();
                             }
+                        });
 
-                            childFlowFiles.add(childFlowFile);
+                        // would prefer this to be part of the SplitWriter, but putting the metadata in FlowFile attributes
+                        // can't be done inside of an OutputStream callback which is where the splitWriter is used
+                        if (splitWriter instanceof BareRecordSplitWriter && transferMetadata) {
+                            final Map<String, String> metadata = new HashMap<>();
+                            for (String metaKey : reader.getMetaKeys()) {
+                                metadata.put(metaKey, reader.getMetaString(metaKey));
+                            }
+                            childFlowFile = session.putAllAttributes(childFlowFile, metadata);
                         }
+
+                        childFlowFiles.add(childFlowFile);
                     }
                 }
             });
@@ -378,7 +358,7 @@ public class SplitAvro extends AbstractProcessor {
         private DatumWriter<GenericRecord> writer;
 
         @Override
-        public void init(final DataFileStream<GenericRecord> reader, final String codec, final OutputStream out) throws IOException {
+        public void init(final DataFileStream<GenericRecord> reader, final String codec, final OutputStream out) {
             writer = new GenericDatumWriter<>(reader.getSchema());
             encoder = EncoderFactory.get().binaryEncoder(out, null);
         }
@@ -394,7 +374,7 @@ public class SplitAvro extends AbstractProcessor {
         }
 
         @Override
-        public void close() throws IOException {
+        public void close() {
             // nothing to do
         }
     }
